2008-02-26  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Update gnulib. Import havelib module.

2008-01-20  Martin Lambers <marlam@marlam.de>

	* gnulib/*: Add missing files.

2008-01-19  Martin Lambers <marlam@marlam.de>

	* mhlib, cvl, cvtool: Update license to GPLv3 or later.
	* gnulib/*, build-aux/config.rpath: Update gnulib.

2008-01-18  Martin Lambers <marlam@marlam.de>

	* mhlib/mh_alloc.h, mhlib/mh_alloc.c, mhlib/mh_math.h,
	mhlib/mh_math.c: Do not use "extern inline" because its semantics are
	incompatiblie between gcc-4.3 and prior versions.
	* cvtool/cvtool.c, cvtool/Makefile.am: Remove the test command.

2008-01-16  Martin Lambers <marlam@marlam.de>

	* cvl/cvl_hdr.c, cvl/glsl/hdr/tonemap_ashikhmin02_step1.glsl,
	cvl/glsl/hdr/tonemap_ashikhmin02_step2.glsl: Fix
	cvl_tonemap_ashikhmin02().
	* cvl/cvl_hdr.c, cvl/glsl/hdr/tonemap_ashikhmin02_step1.glsl,
	cvl/glsl/hdr/tonemap_ashikhmin02_step2.glsl: Tweak
	cvl_tonemap_ashikhmin02().
	* cvtool/cmd_tonemap.c, doc/cvtool.texi, tests/cmd_tonemap.sh: Add the
	methods reinhard05, ashikhmin02, reinhard02 to the tonemap command.
	* README, NEWS, doc/cvl.texi: Update for version 0.2.3.

2008-01-15  Martin Lambers <marlam@marlam.de>

	* cvl/cvl/cvl_hdr.h, cvl/cvl_hdr.c, cvl/Makefile.am,
	cvl/glsl/hdr/tonemap_ashikhmin02_step1.glsl,
	cvl/glsl/hdr/tonemap_ashikhmin02_step2.glsl: Add
	cvl_tonemap_ashikhmin02().

2008-01-14  Martin Lambers <marlam@marlam.de>

	* cvl/cvl/cvl_hdr.h, cvl/cvl_hdr.c, cvl/Makefile.am,
	cvl/glsl/hdr/tonemap_reinhard02_step1.glsl,
	cvl/glsl/hdr/tonemap_reinhard02_step2.glsl: Add
	cvl_tonemap_reinhard02().
	* cvl/glsl/hdr/tonemap_reinhard02_step2.glsl: Fix the prescaling step.
	* cvl/cvl/cvl_hdr.h, cvl/cvl_hdr.c, cvtool/cmd_tonemap.c: Change
	interfaces to allow faster use in interactive applications.

2008-01-13  Martin Lambers <marlam@marlam.de>

	* cvl/cvl/cvl_hdr.h, cvl/cvl_hdr.c, cvl/Makefile.am,
	cvl/glsl/hdr/tonemap_reinhard05.glsl, cvl/glsl/hdr/log_avg_lum.glsl,