@@ -1,5 +1,7 @@
 %.glsl.h: %.glsl
-	MACRONAME="CVL_`echo $< | sed -e s/^.*\\\/// -e s/\\\.glsl$$// -e s/-/_/g | tr [:lower:] [:upper:]`_GLSL_STR"; \
+	DIRNAME="`echo $@ | sed -e s/\\\.glsl\\\.h$$// -e s/\\\/[a-zA-Z0-9_-]*$$//`"; \
+	mkdir -p $$DIRNAME; \
+	MACRONAME="CVL_`echo $< | sed -e s/^.*\\\/// -e s/\\\.glsl$$// -e s/-/_/g | tr [a-z] [A-Z]`_GLSL_STR"; \
 	(echo "#ifndef $$MACRONAME"; \
 	 echo "#define $$MACRONAME \\"; \
 	 sed -e s/\\\\/\\\\\\\\/g \
